kubernetes/apps/portainer/manifest/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portainer-route
  namespace: uptime-kuma
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "kuma.yuriy-lab.cloud"
    - "uptime.yuriy-lab.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptime-kuma
          port: 3001
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authentik-auth
  namespace: uptime-kuma
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: uptimekuma-route
  extAuth:
    headersToExtAuth:
      - accept
      - cookie
      - authorization
      - x-forwarded-proto
    failOpen: false
    http:
      backendRef:
        name: ak-outpost-proxy
        namespace: authentik
        port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - X-Forwarded-Host
        - X-Forwarded-Proto
        - X-Forwarded-Uri
---
